--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use postgres/example user/password credentials
 version: '3.9'
 
 services:
@@ -7,6 +6,8 @@ services:
     container_name: datascience-piscine-database
     restart: always
     shm_size: 128mb
+    volumes:
+      - ./ds00:/usr/src/app/ds00
     ports:
       - 5432:5432
     environment:
