--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./ds00:/usr/src/app/ds00
       - ./ds01:/usr/src/app/ds01
+      - ./scripts:/usr/src/app/scripts
     ports:
       - 5432:5432
     environment:
